Update namespace names

--- a/DeveloperShelf.TokenBucket/DeveloperShelf.TokenBucket.Tests/DeveloperShelf.TokenBucket.Tests.csproj
+++ b/DeveloperShelf.TokenBucket/DeveloperShelf.TokenBucket.Tests/DeveloperShelf.TokenBucket.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DeveloperShelf.TokenBucket.Manager\DeveloperShelf.TokenBucket.Manager.csproj" />
+    <ProjectReference Include="..\DeveloperShelf.TokenBucket\DeveloperShelf.TokenBucket.csproj" />
   </ItemGroup>
 
 </Project>
